[package]
name = "roguelike_tut"
version = "0.1.0"
authors = ["Ysgard <ysgard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rltk = "0.5.9"
specs = { version = "0.15.1", features = ["nightly"] }
specs-derive = "0.4.0"


